# oh-my-copilot

./: .gitignore  .mcp.json  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  biome.json  oh-my-copilot-0.4.0.tgz  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
.omc/state/: agent-replay-e99d13ed-207f-4989-b443-90f940ec81b2.jsonl  mission-state.json  subagent-tracking.json
agents/: analyst.md  architect.md  code-reviewer.md  debugger.md  explore.md  planner.md  qa-tester.md  scientist.md  security-reviewer.md  test-engineer.md  tracer.md  verifier.md
crates/omcp-explore-harness/: Cargo.toml
crates/omcp-explore-harness/src/: find.rs  grep.rs  main.rs  stat.rs  symbols.rs  walker.rs
crates/omcp-explore-harness/tests/: cli.rs
crates/omcp-explore-harness/tests/fixtures/: notes.txt  sample.rs  sample.ts
crates/omcp-explore-harness/tests/fixtures/nested/: inner.md
docs/adr/: ADR-C-ultraqa-sciomc-removed.md  ADR-RP-12-worktree-path-contract.md  ADR-omcp-cancel-semantics.md  ADR-omcp-eb-02-outbox-schema.md  ADR-omcp-eb-05-heartbeat-freshness.md  ADR-omcp-eb-06-ipc-mesh-revival.md  ADR-omcp-rg-01-dispatch-receipt.md  (+9 more)
hooks/: post-tool-background-notify.ts  post-tool-track-state.ts  pre-tool-suggest-fleet.ts
scripts/: omcp-hook-dispatch.cjs  omcp-hud.mjs  omcp-loop-watcher.mjs  run-live-e2e-team.mjs  run-live-ipc-smoke.mjs  test-env-dispatch.cjs  test-hook-dispatch.cjs
skills/loop/: SKILL.md
src/: index.ts
(+515 files in other folders)
