[package]
name = "omcp-explore-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "omcp-explore"
path = "src/main.rs"

[dependencies]
regex = "1.10"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
